[ash-md] Makes sure that minimized windows can be activated in overview

When windows are minimized before entering overview mode, they are
replaced with a widget that has mirrored layers. Opacity of the original
window needs to be then set to 1 in order to make it visible
(in WindowMirrorView::InitLayerOwner()).
Upon exiting overview the original window's opacity is restored.
This logic breaks if a window is selected - the opacity need not be
restored (to zero).
Make it so that the opacity is set to 1 upon exit if a window is
selected.

BUG=677177

Review-Url: https://codereview.chromium.org/2637403013
Cr-Commit-Position: refs/heads/master@{#445524}

Former-commit-id: 8f64e9220762c7c7d5237cb4b4222898c5b0f4dc