ash/common/wm/overview/scoped_transform_overview_window.h
@@ -141,6 +141,9 @@ class ASH_EXPORT ScopedTransformOverviewWindow : public ui::EventHandler {
   // For minmiezd window, this will be a window that hosts mirrored layers.
   WmWindow* GetOverviewWindow() const;
 
+  // Ensures that a window is visible by setting its opacity to 1.
+  void EnsureVisible();
+
   // Returns the window created for minimized window, or nullptr
   // if it does not exit.
   WmWindow* GetOverviewWindowForMinimizedState() const;
