ash/common/wm/overview/window_selector_item.cc
@@ -442,6 +442,10 @@ void WindowSelectorItem::RestoreWindow() {
       OverviewAnimationType::OVERVIEW_ANIMATION_LAY_OUT_SELECTOR_ITEMS);
 }
 
+void WindowSelectorItem::EnsureVisible() {
+  transform_window_.EnsureVisible();
+}
+
 void WindowSelectorItem::Shutdown() {
   if (transform_window_.GetTopInset()) {
     // Activating a window (even when it is the window that was active before
@@ -555,7 +559,7 @@ void WindowSelectorItem::ButtonPressed(views::Button* sender,
     return;
   }
   CHECK(sender == caption_container_view_->listener_button());
-  window_selector_->SelectWindow(transform_window_.window());
+  window_selector_->SelectWindow(this);
 }
 
 void WindowSelectorItem::OnWindowDestroying(WmWindow* window) {
